# Creator-Intelligence-Platform

./: .env.example  .gitignore  README.md  apply_sre_rules.py  audit_live_api.py  aws_performance_report.md  build_output.txt  check.py  check_db.py  check_lambda_config.py  creator_intelligence.db  deploy_frontend.py  deploy_lambdas.py  diagnose_errors.py  discrepancies.json  dump_all_logs.py  dump_logs.py  fix_api_routes.py  get_errors.py  index.html  lambda_logs.txt  last_30_videos_processed.csv  list_models.py  main.py  metadata.json  mock_api.py  package-lock.json  package.json  pyproject.toml  qa_verification.py  server.ts  server.ts.bak  sync_report.txt  table_check_out.txt  test_api.py  test_aws.py  test_dynamodb.py  test_haiku.py  test_idea.py  test_server.py  (+9 more)
Sample/: last_30_videos_processed.csv  twitter.py  youtude.py
docs/: aws_cost_optimization_report.md
infra/: main.tf  variables.tf
lambdas/common/: youtube_utils.py
lambdas/content_enhancer/: main.py
lambdas/content_ingestion/: main.py
lambdas/feedback_ingest/: cleaner.py
lambdas/idea_generator/: main.py
lambdas/insight_engine/: main.py
lambdas/prediction_api/: main.py
lambdas/trend_collector/: main.py
mini_web/: app.js  index.html  style.css
readme_instruction/: aws_instructions.md
sagemaker/processing/: preprocess.py
sagemaker/training/: train.py
scripts/: audit_aws.py  deploy_frontend.py  deploy_ingestion_lambda.py  deploy_lambdas.py  provision_aws.py  seed_youtube_data.py  setup_apigw.py  setup_cloudfront.py  setup_sagemaker.py
src/: App.tsx  api.ts  index.css  types.ts
(+24 files in other folders)
